--- a/svcsvn/AVC/h264_main_decoder/lib_main/CMakeLists.txt
+++ b/svcsvn/AVC/h264_main_decoder/lib_main/CMakeLists.txt
@@ -1,5 +1,26 @@
 include_directories(../../h264_baseline_decoder/lib_baseline)
 
 add_library (AVC_main
-BitstreamSkipB.ccabac.cCabacMbPred.cCabacMvAndRef.ccavlc_main.cDirect_prediction.cFill_caches_cabac.cFinishFrameMain.cinterpolation_main_8x8.cinterpolation_main.cLoop_Filter_B.cmacroblock_cabac.cmacroblock_layer_main.cmb_cabac_partionning.cmb_pred_main.cresidual_cabac.cSetImage4x4.cSetImage8x8.cslice_cabac.cslice_data_B.cslice_data_cabac.cvlc_cabac.c
+BitstreamSkipB.c
+cabac.c
+CabacMbPred.c
+CabacMvAndRef.c
+cavlc_main.c
+Direct_prediction.c
+Fill_caches_cabac.c
+FinishFrameMain.c
+interpolation_main_8x8.c
+interpolation_main.c
+Loop_Filter_B.c
+macroblock_cabac.c
+macroblock_layer_main.c
+mb_cabac_partionning.c
+mb_pred_main.c
+residual_cabac.c
+SetImage4x4.c
+SetImage8x8.c
+slice_cabac.c
+slice_data_B.c
+slice_data_cabac.c
+vlc_cabac.c
 )
