--- a/svcsvn/SVC/lib_svc/CMakeLists.txt
+++ b/svcsvn/SVC/lib_svc/CMakeLists.txt
@@ -3,5 +3,62 @@ include_directories(../../AVC/h264_baseline_decoder/lib_baseline ../../AVC/h264_
 ADD_DEFINITIONS(-DHAVE_SDL)
 
 add_library (SVC_baseline
-B_BL.cBackEdge.cBL_residual.cBL.ccabac_svc.cCabacBMacroblock.cCabacIPartionning.cCabacPMacroblock.ccavlc_svc.cChooseLayer.cCoeffLevelPrediction.cCoordonates.cegde_boundary.cErrorConcealment.cErrorDetection.cFill_caches_svc.cFinishFrameSVC.cI_BL.cInterLayerPrediction.cLoop_filter_ext.cmacroblock_filter.cMb_B_svc.cMb_I_svc.cMb_P_svc.cmb_padding.cmb_upsample_filter.cMemoryManagement.cMergeMvIdx.cmotion_vector_svc.cnal_unit_header_svc_extension.cP_BL.cParseAUDecoder.cPartitionType.cpic_list_svc.cresidual_4x4.cresidual_8x8.cresidual_chroma.cResidualProcessing.cseq_parameter_set_svc_extension.cSlice_data_B_avc.cSlice_data_B_svc.cslice_data_cabac.cslice_data_cavlc.cSlice_data_I_avc.cslice_data_I_svc.cSlice_data_P_avc.cslice_data_P_svc.cslice_data_svc.cslice_header_svc.cslice_layer_in_scalable_extension_rbsp.cSliceHeaderAnnex.cSliceHeaderExtension.csvc_neighbourhood.cSVCdisplay.cSwitchAdress.cupsample_residu.cVlcCabacSvc.cWriteBackSVC.c
+B_BL.c
+BackEdge.c
+BL_residual.c
+BL.c
+cabac_svc.c
+CabacBMacroblock.c
+CabacIPartionning.c
+CabacPMacroblock.c
+cavlc_svc.c
+ChooseLayer.c
+CoeffLevelPrediction.c
+Coordonates.c
+egde_boundary.c
+ErrorConcealment.c
+ErrorDetection.c
+Fill_caches_svc.c
+FinishFrameSVC.c
+I_BL.c
+InterLayerPrediction.c
+Loop_filter_ext.c
+macroblock_filter.c
+Mb_B_svc.c
+Mb_I_svc.c
+Mb_P_svc.c
+mb_padding.c
+mb_upsample_filter.c
+MemoryManagement.c
+MergeMvIdx.c
+motion_vector_svc.c
+nal_unit_header_svc_extension.c
+P_BL.c
+ParseAUDecoder.c
+PartitionType.c
+pic_list_svc.c
+residual_4x4.c
+residual_8x8.c
+residual_chroma.c
+ResidualProcessing.c
+seq_parameter_set_svc_extension.c
+Slice_data_B_avc.c
+Slice_data_B_svc.c
+slice_data_cabac.c
+slice_data_cavlc.c
+Slice_data_I_avc.c
+slice_data_I_svc.c
+Slice_data_P_avc.c
+slice_data_P_svc.c
+slice_data_svc.c
+slice_header_svc.c
+slice_layer_in_scalable_extension_rbsp.c
+SliceHeaderAnnex.c
+SliceHeaderExtension.c
+svc_neighbourhood.c
+SVCdisplay.c
+SwitchAdress.c
+upsample_residu.c
+VlcCabacSvc.c
+WriteBackSVC.c
 )
