don't use pdb in release

--- a/cmake/CommonFiles/src/OpenSVCDec.vcxproj
+++ b/cmake/CommonFiles/src/OpenSVCDec.vcxproj
@@ -135,6 +135,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;OPENSVCDEC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\..\..\svcsvn\AVC\h264_baseline_decoder\lib_baseline;..\..\..\svcsvn\AVC\h264_main_decoder\lib_main;..\..\..\svcsvn\SVC\lib_svc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
